# example-rust-graphql-server

./: .gitignore  Cargo.toml
src/: main.rs  schema.rs
